# conda-store

./: .codespellrc  .dependabot.yaml  .dependabot.yml  .dockerignore  .gitignore  .hadolint.yaml  .hadolint.yml  .pre-commit-config.yaml  .readthedocs.yaml  .vale.ini  BackwardsCompatibilityPolicy.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  conda-store.py  cut-release-pr.sh  docker-compose-core.yml  docker-compose.macos.yaml  docker-compose.override.yaml  docker-compose.ui.yaml  docker-compose.yaml  environment.yaml  flake.nix  package.json  pyproject.toml  setup.cfg  setup.py  shell.nix
conda-store/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yaml  install.json  package.json  pyproject.toml  setup.cfg  setup.py
conda-store-server/: Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  environment-dev.yaml  environment-macos-dev.yaml  environment-windows-dev.yaml  environment.yaml  hatch_build.py  pyproject.toml  setup.cfg  setup.py
conda-store-server/alembic/: env.py
conda-store-server/alembic/versions/: 48be4072fe58_initial_schema.py  5ad723de2abd_adding_container_registry_value_to_enum.py  8d63a091aff8_add_environment_description.py
conda-store-server/conda_store_server/: __init__.py  __main__.py  _version.py  alembic.ini  api.py  app.py  auth.py  build.py  cli.py  conda.py  conda_store.py  conda_store_config.py  conda_utils.py  dbutil.py  environment.py  exception.py  logging.py  orm.py  registry.py  schema.py  storage.py  testing.py  utils.py  version.py
conda-store-server/conda_store_server/_internal/: __init__.py  alembic.ini  build.py  client.py  conda_utils.py  dbutil.py  environment.py  log.py  orm.py  schema.py  settings.py  testing.py  utils.py
conda-store-server/conda_store_server/_internal/action/: __init__.py  add_conda_prefix_packages.py  add_lockfile_packages.py  base.py  download_packages.py  generate_conda_docker.py  generate_conda_export.py  generate_conda_pack.py  generate_constructor_installer.py  generate_lockfile.py  get_conda_prefix_stats.py  install_lockfile.py  install_specification.py  remove_conda_prefix.py  set_conda_prefix_permissions.py  utils.py
conda-store-server/conda_store_server/_internal/alembic/: README  README.md  env.py  script.py.mako
conda-store-server/conda_store_server/_internal/server/: __main__.py  app.py  dependencies.py  pagination.py
conda-store-server/conda_store_server/_internal/worker/: __main__.py  app.py  build.py  tasks.py
conda-store-server/conda_store_server/action/: __init__.py  add_conda_prefix_packages.py  add_lockfile_packages.py  base.py  download_packages.py  generate_conda_docker.py  generate_conda_export.py  generate_conda_pack.py  generate_constructor_artifacts.py  generate_constructor_installer.py  generate_lockfile.py  get_conda_prefix_stats.py  install_lockfile.py  install_specification.py  remove_conda_prefix.py  set_conda_prefix_permissions.py  utils.py
conda-store-server/conda_store_server/alembic/: env.py
conda-store-server/conda_store_server/alembic/versions/: 03c839888c82_add_canceled_status.py  0e213092db14_add_v2_role_mappings.py  0f7e23ff24ee_add_worker.py  16f65805dc8f_split_conda_package_into_conda_package_.py  30b37e725c32_add_build_key_version.py  37c342536b84_add_v2_role_mappings.py  39ef0e9e43f6_add_tarball_ext_column_to_.py  48be4072fe58_initial_schema.py  4aee06ffd570_adding_metadata__column_to_environment.py  57cd11b949d5_add_installer.py  5ad723de2abd_adding_container_registry_value_to_enum.py  64a749e87619_add_build_key_version.py  6d477abab205_add_cancelled_enum.py  771180018e1b_add_v2_role_mappings.py  82c1cfe39561_add_installer.py  8d63a091aff8_add_environment_description.py  97d2ad3d29f4_add_celery_table.py  abd7248d5327_adding_a_settings_table.py  b387747ca9b7_role_mapping.py  cbe7aabdbc88_add_task_id.py  cd5b48ff57b5_lockfile_spec.py  d78e9889566a_add_status_info.py  e17b4cc6e086_add_build_hash.py  e5abc533f920_on_delete_cascade_policy.py
conda-store-server/conda_store_server/plugins/: __init__.py  hookspec.py  plugin_context.py  plugin_manager.py  plugin_registry.py  registry.py  types.py
conda-store-server/conda_store_server/plugins/lock/: conda_lock.py
conda-store-server/conda_store_server/plugins/types/: lock.py  types.py
conda-store-server/conda_store_server/plugins/v1/: lock.py
conda-store-server/conda_store_server/server/: __init__.py  __main__.py  app.py  auth.py  dbutil.py  dependencies.py  schema.py  utils.py
conda-store-server/conda_store_server/server/static/: conda-store-ui.css  conda-store-ui.css.map
conda-store-server/conda_store_server/server/templates/: 404.html  (+12 more)
conda-store-server/conda_store_server/worker/: __main__.py  app.py  tasks.py  utils.py
conda-store-server/install/conda-store/: Chart.yaml  README.md  values.yaml
conda-store-server/tests/: conftest.py  test_actions.py  test_api.py  test_app.py  test_app_api.py  test_auth.py  test_conda_store.py  test_conda_store_config.py  test_db_api.py  test_memory_leak.py  test_server.py  test_storage.py  test_testing.py  test_traitlets.py  test_usage.py  test_utils.py
conda-store-server/tests/_internal/: test_orm.py  test_schema.py  test_settings.py  test_utils.py
conda-store-server/tests/assets/: conda-lock.zlib.flask.yaml  conda-lock.zlib.yaml
conda-store-server/tests/model_tests/: conftest.py  test_conda_store_server_api.py
conda-store-server/tests/plugins/: test_plugin_context.py  test_plugin_manager.py  test_plugin_registry.py
conda-store-server/tests/server/: test_auth.py
conda-store-server/tests/user_journeys/: README.md  test_user_journeys.py
conda-store/conda_store/: __init__.py  __main__.py  api.py  auth.py  cli.py  exception.py  runner.py  utils.py
conda-store/conda_store/_internal/: auth.py  cli.py  runner.py  utils.py
conda-store/src/: CardGroup.tsx  CondaCard.tsx  EnvironmentEditorPanel.tsx  ErrorPanel.tsx  ImageDownloadModal.tsx  index.ts  interfaces.ts  widget.tsx
conda-store/tests/: authenticated-tests.sh  authenticated-token-tests.sh  shebang.sh  unauthenticated-tests.sh
(+523 files in other folders)
