[build-system]
# https://github.com/ofek/hatch-vcs
requires = ["hatchling>=1.14.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-store-server"
description = "Conda Environment Management, Builds, and Serve"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["conda"]
authors = [
  { name = "Christopher Ostrouchov", email = "crhsi.ostrouchov@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  # env builds
  # conda (which cannot be installed via pip see https://github.com/conda/conda/issues/11715)
  "python-docker",
  # we need platform dependent dependencies here
  "conda-docker; sys_platform == 'linux'",
  "conda-lock >=1.0.5",
  "conda-pack",
  "conda-package-handling",
  "conda-package-streaming",
  # web server
  "alembic",
  "celery",
  "fastapi",
  "filelock",
  "flower",
  "itsdangerous",
  "jinja2",
  "pyjwt",
  "psycopg2-binary",
  "pymysql",
  "pyyaml",
  "redis",
  "requests",
  "pydantic<2",
  "python-multipart",
  "sqlalchemy<2",
  "traitlets",
  "uvicorn",
  "yarl",
  # artifact storage
  "minio",
  "platformdirs >=4.0,<5.0a0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://conda.store/"
Source = "https://github.com/conda-incubator/conda-store"

[tool.hatch.version]
path = "conda_store_server/__init__.py"

[tool.hatch.envs.dev]
dependencies = [
  "aiohttp>=3.8.1",
  "build",
  "docker-compose",
  "docker-py<7",
  "pre-commit",
  "pytest",
  "pytest-celery",
  "pytest-playwright",
  "twine>=5.0.0",
  "pkginfo>=1.10", # Needed to support metadata 2.3
]

[tool.hatch.envs.lint]
dependencies = ["pre-commit"]

[tool.hatch.envs.lint.scripts]
lint = ["pre-commit run --all"]

unit-test = "pytest -m 'not extended_prefix and not user_journey' tests"
playwright-test = [
  "playwright install",
  "pytest --video on ../tests/test_playwright.py"
]
integration-test = ["pytest ../tests/test_api.py ../tests/test_metrics.py"]

user-journey-test = ["pytest -m user_journey"]

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist.hooks.custom]

[project.scripts]
conda-store-server = "conda_store_server.server.__main__:main"
conda-store-worker = "conda_store_server.worker.__main__:main"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']

[tool.isort]
lines_between_types = 1
lines_after_imports = 2

[tool.ruff]
ignore = [
  "E501", # line-length
]

[tool.check-wheel-contents]
# ignore alembic migrations https://github.com/jwodder/check-wheel-contents?tab=readme-ov-file#w004--module-is-not-located-at-importable-path
ignore = ["W004"]

[tool.pytest.ini_options]
markers = [
  "playwright: mark a test as a playwright test",
  "integration: mark a test as an integration test",
  "user_journey: mark a test as a user journey test",
]
