# Copyright (c) conda-store development team. All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
[build-system]
# https://github.com/ofek/hatch-vcs
requires = ["hatchling>=1.14.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-store-server"
description = "Conda Environment Management, Builds, and Serve"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["conda"]
authors = [
  { name = "Christopher Ostrouchov", email = "chris.ostrouchov@gmail.com" },
]
maintainers = [
  { name = "Tania Allard", email = "trallard@bitsandchips.me" },
  { name = "Pavithra Eswaramoorthy", email = "pavithraes@outlook.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
]
dependencies = [
  # env builds
  # conda (which cannot be installed via pip see https://github.com/conda/conda/issues/11715)
  # constructor also not pip installable
  "python-docker",
  # we need platform dependent dependencies here
  "conda-docker; sys_platform == 'linux'",
  "conda-lock >=1.0.5",
  "conda-pack",
  "conda-package-handling",
  "conda-package-streaming",
  # web server
  "alembic",
  "celery",
  "fastapi",
  "filelock",
  "flower",
  "itsdangerous",
  "jinja2",
  "pyjwt",
  "psycopg2-binary",
  "pymysql",
  "pyyaml",
  "redis",
  "requests",
  "pydantic >=1.10.16,<2.0a0",
  "python-multipart",
  "sqlalchemy<2.0a0",
  "traitlets",
  "uvicorn",
  "yarl",
  # artifact storage
  "minio",
  "platformdirs >=4.0,<5.0a0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://conda.store/"
Source = "https://github.com/conda-incubator/conda-store"
Issues = "https://github.com/conda-incubator/conda-store/issues"

[tool.hatch.version]
path = "conda_store_server/__init__.py"

[tool.hatch.envs.dev]
dependencies = [
  "aiohttp>=3.8.1",
  "build",
  "docker-compose",
  "docker-py<7",
  "pre-commit",
  "pytest",
  "pytest-celery",
  "pytest-playwright",
  "twine>=5.0.0",
  "pkginfo>=1.10", # Needed to support metadata 2.3

]

[tool.hatch.envs.lint]
dependencies = ["pre-commit"]

[tool.hatch.envs.lint.scripts]
lint = ["pre-commit run --all"]
unit-test = "pytest -m 'not extended_prefix and not user_journey' tests"
playwright-test = [
  "playwright install",
  "pytest --video on ../tests/test_playwright.py"
]
integration-test = ["pytest ../tests/test_api.py ../tests/test_metrics.py"]
user-journey-test = ["pytest -m user_journey"]

# custom conda-store build hook, used to bundle ui artefacts
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist.hooks.custom]

[project.scripts]
conda-store-server = "conda_store_server._internal.server.__main__:main"
conda-store-worker = "conda_store_server._internal.worker.__main__:main"

[tool.black]
line-length = 88

[tool.isort]
lines_between_types = 1
lines_after_imports = 2

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "E501", # line-length

]

[tool.check-wheel-contents]
# ignore alembic migrations https://github.com/jwodder/check-wheel-contents?tab=readme-ov-file#w004--module-is-not-located-at-importable-path
# ignore empty files w/license header
ignore = ["W004", "W002"]

[tool.pytest.ini_options]
markers = [
  "playwright: mark a test as a playwright test",
  "integration: mark a test as an integration test",
  "user_journey: mark a test as a user journey test",
  "extended_prefix: mark a test as for windows extended_prefix",
]
