[metadata]
name = conda-store-server
version = attr: conda_store_server.__version__
description = Conda Environment Management, Builds, and Serve
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Christopher Ostrouchov
author_email = chris.ostrouchov@gmail.com
url = https://github.com/Quansight/conda-store
keywords = conda
license = BSD License
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only
project_urls =
  Bug Reports = https://github.com/quansight/conda-store
  Documentation = https://conda-store.readthedocs.io/
  Source = https://github.com/quansight/conda-store

[options]
zip_safe = False
packages = find:
install_requires =
  conda-docker
  conda-pack
  celery
  sqlalchemy
  requests
  fastapi
  pyyaml
  redis
  pydantic
  minio
  traitlets
  pyjwt
  yarl
  filelock
  itsdangerous
  jinja2
  python-multipart
# conda (which should not be included here)

[options.package_data]
conda_store_server = alembic.ini, alembic/*, alembic/versions/*, server/templates/*

[options.entry_points]
console_scripts =
    conda-store-server=conda_store_server.server.__main__:main
    conda-store-worker=conda_store_server.worker.__main__:main

[options.extras_require]
dev = pytest; pytest-mock; pytest-sqlalchemy-mock>=0.1.4; pytest-playwright; black==22.3.0; flake8; sphinx; myst-parser; sphinx-panels; sphinx-copybutton; pydata-sphinx-theme; build; twine

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 89
exclude =
  .git,
  __pycache__,
