[build-system]
requires = ["hatchling>=1.14.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "conda-store"
description = "conda-store client"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["conda"]
authors = [
  { name = "Christopher Ostrouchov", email = "chris.ostrouchov@gmail.com" },
]
maintainers = [{ name = "Tania Allard", email = "trallard@bitsandchips.me" }]
# TODO: update maintainers
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
]
dependencies = ["rich", "click", "yarl", "aiohttp", "ruamel.yaml"]
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://conda.store/"
Source = "https://github.com/conda-incubator/conda-store/conda-store"

[tool.hatch.version]
source = "vcs"
# need to specify root as .git is one level up
raw-options = {root="../", relative_to="pyproject.toml", local_scheme="node-and-date"}

[tool.hatch.build.hooks.vcs]
version-file = "conda_store/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """<p align="center">
  <a href="https://conda.store/">
    <img src="https://github.com/conda-incubator/conda-store/blob/main/docusaurus-docs/static/img/logo.svg" width="35%" alt="conda-store logo - conda.store homepage" />
  </a>
</p>

"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "## About the conda-store ecosystem"

# hack to add long readme
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text="""
conda-store provides the familiarity and flexibility of conda environments, without compromising reliability for collaborative settings.

conda-store is built to work for all team members from individual data scientists to administrators, while making sure your team follows best practices throughout the environment life cycle: from initial environment creation to using environments in a production machine.

## Key features ✨

- **Flexibility**:
  - Users can create and update environments with the Graphical UI or a YAML editor.
  - The environments are automatically version-controlled and all versions are readily available.
- **Reproducibility**:
  - Users can share environments quickly through the auto-generated artifacts including a lockfile, docker image, YAML file, and tarball.
  - conda-store pins exact versions of all packages and their dependencies in all the auto-generated artifacts.
- **Governance**:
  - Users have access to admin-approved packages and channels for their work and can request new ones when needed.
  - Admins can insert or require certain packages and versions for organization-level compatibility.
  - Admins can manage users' access levels using "Namespaces", and allow users to share environments across (and only with) their team.

## Get started 💻

Learn more, including how to install, use, and contribute to conda-store in our documentation at [**conda.store**](https://conda.store/).

## Related projects 📦

- React-based conda-store UI [`conda-incubator/conda-store-ui`](https://github.com/conda-incubator/conda-store-ui)
- JupyterLab extension [`conda-incubator/jupyterlab-conda-store`](https://github.com/conda-incubator/jupyterlab-conda-store).

## Code of Conduct 🤝

To guarantee a welcoming and friendly community, we require all community members to follow our [Code of Conduct](https://github.com/conda-incubator/governance/blob/main/CODE_OF_CONDUCT.md).

## License 📄

conda-store is developed under the [BSD-3 LICENSE](./LICENSE).
"""

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.envs.dev]
dependencies = [
  "pre-commit",
  "pytest",
  "pytest-mock",
]

[tool.hatch.envs.dev.scripts]
lint = ["pre-commit run --all"]
test = "pytest tests"

[project.scripts]
conda-store = "conda_store.__main__:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

# TODO: add more ruff rules
[tool.ruff]
ignore = [
  "E501", # line-length

]
