[build-system]
# https://github.com/ofek/hatch-vcs
requires = ["hatchling>=1.14.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-store"
description = "conda-store client"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["conda", "dependency management", "environment management", "reproducibility"]
authors = [
  { name = "Christopher Ostrouchov", email = "chris.ostrouchov@gmail.com" },
]
maintainers = [{ name = "Tania Allard", email = "trallard@bitsandchips.me" },
    {name= "Pavithra Eswaramoorthy", email = "pavithraes@outlook.com"},
    {name="Nikita Karetnikov", email="nkaretnikov@quansight.com"},
  ]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
]
dynamic = ["version"]
dependencies = ["rich",
  "click",
  "yarl",
  "aiohttp>=3.8.1",
  "ruamel.yaml"]

[project.urls]
Homepage = "https://conda.store/"
Source = "https://github.com/conda-incubator/conda-store"
Issues = "https://github.com/conda-incubator/conda-store/issues"

[tool.hatch.version]
path = "conda_store/__init__.py"

[tool.hatch.envs.dev]
dependencies = [
  "build",
  "pytest",
  "twine>=5.0.0",
  "pkginfo >= 1.10",
  "pytest-mock",
]

[tool.hatch.envs.lint]
dependencies = ["pre-commit"]

[tool.hatch.envs.lint.scripts]
lint = ["pre-commit run --all"]

[tool.hatch.envs.dev.scripts]
test = "pytest tests"

[project.scripts]
conda-store = "conda_store.__main__:main"

[tool.black]
line-length = 88

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff]
ignore = [
  "E501", # line-length
]
