[metadata]
name = conda-store
version = attr: conda_store.__version__
description = Conda Store client
long_description = file: README.md, LICENSE
author = Christopher Ostrouchov
author_email = chris.ostrouchov@gmail.com
url = https://github.com/Quansight/conda-store
keywords = conda
license = BSD License
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only
project_urls =
  Bug Reports = https://github.com/quansight/conda-store
  Documentation = https://conda-store.readthedocs.io/
  Source = https://github.com/quansight/conda-store

[options]
zip_safe = True
packages = find:
install_requires =
  rich
  click
  yarl
  aiohttp

[options.entry_points]
console_scripts =
    conda-store-server=conda_store_server.server.__main__:main
    conda-store-worker=conda_store_server.worker.__main__:main

[options.extras_require]
dev = pytest; pytest-mock; black==22.3.0; flake8; sphinx; recommonmark; pydata-sphinx-theme

[options.packages.find]
exclude =
    tests

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 89
exclude =
  .git,
  __pycache__,
